// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - state allocates fee to recipient when delta is above zero 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 117456,
}
`;

exports[`EthVault - state applies penalty when delta is below zero 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 117253,
}
`;

exports[`EthVault - state splits penalty between exiting assets and staking assets 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 107076,
}
`;

exports[`EthVault - state updates exit queue 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 144545,
}
`;
